# db-client

./: .pre-commit-config.yaml  .prettierrc.yaml  Cargo.toml  LICENSE  README.md
.sqlx/: query-fda1b6c6f6aac65e3f2ca6115aa6ed51cc4b8642de6c97116f4620cc937a5e40.json
src/: lib.rs  main.rs
src/db/: client.rs  mod.rs  record.rs
src/handler/: handler.rs
src/migrations/: init.sql
src/model/: record.rs
src/route/: cors.rs  mod.rs  router.rs
src/state/: state.rs
