[package]
name = "app"
default-run = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-native-tls", "postgres", "macros", "bigdecimal"] }
tokio = { version = "1", features = ["full"] }
bigdecimal = { version = "0.3.1", features = ["serde"] }