[package]
name = "app"
default-run = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.20"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-native-tls", "postgres", "macros", "bigdecimal", "json"] }
tokio = { version = "1.29", features = ["full"] }
bigdecimal = { version = "0.3.1", features = ["serde"] }
tower-http = { version = "0.4.3", features = ["cors"] }
